--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -27,7 +27,7 @@ jobs:
           working-directory: TMS_WebApiWithActions_15_03_2023
 
         - name: Tests
-          run: dotnet test --no-build
+          run: dotnet test
           working-directory: TMS_WebApiWithActions_15_03_2023.Tests.Unit
 
 
